# invenio-records-marc21

./: .editorconfig  .gitignore  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  MANIFEST.in  README.md  README.rst  babel.ini  pytest.ini  requirements-devel.txt  run-tests.sh  setup.cfg  setup.py
.github/workflows/: pypi-publish.yml  tests.yml
docs/: Makefile  api.rst  authors.rst  changes.rst  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  make.bat  usage.rst
invenio_records_marc21/: __init__.py  api.py  cli.py  config.py  errors.py  ext.py  proxies.py  tasks.py  utils.py  version.py  views.py
invenio_records_marc21/alembic/: 0058aec64e36_create_marc21_tables.py  109d88c6310c_create_records_marc21_branch.py  8025c60c8465_create_parent_community.py  __init__.py  b9f2911d44c7_marc21_templates_add_updated.py  ed55fea7131e_add_deletion_status_to_marc21.py
invenio_records_marc21/data/: example-record.xml  example-templates.json  fake-metadata.xml  fake-record.json
invenio_records_marc21/jsonschemas/: __init__.py
invenio_records_marc21/jsonschemas/marc21/: marc21-v1.0.0.json
invenio_records_marc21/jsonschemas/records/: record-v1.0.0.json
invenio_records_marc21/loaders/: __init__.py
invenio_records_marc21/mappings/v7/: __init__.py
invenio_records_marc21/marshmallow/: __init__.py  json.py
invenio_records_marc21/records/: __init__.py  api.py  models.py
invenio_records_marc21/records/dumpers/: __init__.py  statistics.py
invenio_records_marc21/records/fields/: resourcetype.py
invenio_records_marc21/records/jsonschemas/: __init__.py
invenio_records_marc21/records/mappings/: __init__.py
invenio_records_marc21/records/statistics/: __init__.py  api.py
invenio_records_marc21/records/systemfields/: __init__.py  context.py  has_draft.py  providers.py  resolver.py  statistics.py  status.py
invenio_records_marc21/requests/: __init__.py  community_inclusion.py  community_submission.py  decorators.py  entity_resolvers.py
invenio_records_marc21/resources/: __init__.py  config.py  resources.py
invenio_records_marc21/resources/deserializers/: __init__.py  deserializer.py  schema.py
invenio_records_marc21/resources/serializers/: __init__.py  errors.py  schema.py  serializer.py
invenio_records_marc21/serializers/: __init__.py
invenio_records_marc21/serializers/ui/: schema.py
invenio_records_marc21/services/: __init__.py  components.py  config.py  customizations.py  errors.py  facets.py  generators.py  permissions.py  services.py  tasks.py
invenio_records_marc21/services/communities/: __init__.py  config.py  service.py
invenio_records_marc21/services/communities_inclusion/: __init__.py  service.py
invenio_records_marc21/services/components/: __init__.py  access.py  metadata.py  pid.py  pids.py
invenio_records_marc21/services/pids/: __init__.py  datacite.py  tasks.py
invenio_records_marc21/services/record/: __init__.py  metadata.py  types.py  utils.py
invenio_records_marc21/services/review/: __init__.py  service.py
invenio_records_marc21/services/schemas/: __init__.py  access.py  files.py  metadata.py  pids.py  statistics.py  utils.py  versions.py
invenio_records_marc21/system/: __init__.py  config.py  models.py  service.py
invenio_records_marc21/templates/invenio_records_marc21/: base.html  deposit.html  index.html  record.html  results.html  search.html  tombstone.html  uploads.html
invenio_records_marc21/translations/: messages.pot
invenio_records_marc21/ui/: __init__.py  decorators.py  filters.py  records.py
invenio_records_marc21/ui/records/: __init__.py  decorators.py  errors.py  filters.py  records.py  searchapp.py  wrappers.py
invenio_records_marc21/ui/theme/: __init__.py  config.py  decorators.py  deposit.py  views.py  webpack.py
invenio_records_marc21/upgrade_scripts/: migrate_parent.py
invenio_records_marc21/vocabularies/: __init__.py  access_right.py  views.py  vocabularies.py  vocabulary.py
tests/: __init__.py  conftest.py  fake_datacite_client.py  test-error-metadata.xml  test-metadata.xml  test-record.json  test_invenio_records_cli.py  test_invenio_records_marc21.py
tests/api/: conftest.py  test_api_simple_flow.py
tests/records/: conftest.py  test-record.json  test_jsonschema.py
tests/records/fields/: conftest.py  test_systemfield_access.py  (+1 more)
tests/services/: conftest.py  test-metadata.json  test-metadata.xml  test_create_record.py  test_pids_service.py  test_pids_tasks.py  test_record_service.py
(+191 files in other folders)
