# -*- coding: utf-8 -*-
#
# This file is part of Invenio.
#
# Copyright (C) 2021-2023 Graz University of Technology.
#
# Invenio-Records-Marc21 is free software; you can redistribute it and/or
# modify it under the terms of the MIT License; see LICENSE file for more
# details.


[metadata]
name = invenio-records-marc21
version = attr: invenio_records_marc21.__version__
description = "Invenio Marc21 datamodel."
long_description = file: README.rst, CHANGES.rst
keywords = invenio Marc21 record
license = MIT
author = "Graz University of Technology"
author_email = info@tugraz.at
platforms = any
url = https://github.com/tu-graz-library/invenio-records-marc21
classifiers =
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:
python_requires = >=3.8
zip_safe = False
install_requires =
    arrow>=1.0.0
    invenio-rdm-records>=4.0.0,<4.10.0
    fastjsonschema>=2.16.0
    lxml>=4.6.2

[options.extras_require]
tests =
    flake8<5.0.0 # necessary to prevent error AttributeError ConfigFileFinder not found
    invenio-app>=1.3.0,<2.0.0
    invenio-cache>=1.0.6
    invenio-db>=1.0.13,<2.0
    invenio-i18n>=2.0.0,<3.0.0
    invenio-previewer>=1.3.4
    invenio-search[opensearch2]>=2.0.0
    pytest-black>=0.3.0
    pytest-invenio>=1.4.3
    pytest-bandit>=0.6.1
    pytest-mock>=1.6.0
    Sphinx>=4
    sphinx-autodoc-typehints>=1.10.3

[options.entry_points]
flask.commands =
    marc21 = invenio_records_marc21.cli:marc21
invenio_db.alembic =
    invenio_records_marc21 = invenio_records_marc21:alembic
invenio_base.apps =
    invenio_records_marc21 = invenio_records_marc21:InvenioRecordsMARC21
invenio_base.api_apps =
    invenio_records_marc21 = invenio_records_marc21:InvenioRecordsMARC21
invenio_base.api_blueprints =
    invenio_records_marc21_record = invenio_records_marc21.views:create_record_bp
    invenio_records_marc21_record_files = invenio_records_marc21.views:create_record_files_bp
    invenio_records_marc21_draft_files = invenio_records_marc21.views:create_draft_files_bp
    invenio_records_marc21_parent_links = invenio_records_marc21.views:create_parent_record_links_bp
    invenio_records_marc21_ext = invenio_records_marc21.views:blueprint
invenio_base.blueprints =
    invenio_records_marc21_ui = invenio_records_marc21.ui:create_blueprint
    invenio_records_marc21_ext = invenio_records_marc21.views:blueprint
invenio_celery.tasks =
    invenio_marc21_records_services = invenio_records_marc21.services.tasks
    invenio_marc21_records_pids = invenio_records_marc21.services.components.pids.tasks
    invenio_marc21_records_tasks = invenio_records_marc21.fixtures.tasks
invenio_db.models =
    invenio_records_marc21_model = invenio_records_marc21.records.models
    invenio_records_marc21_template_model = invenio_records_marc21.system.models
invenio_i18n.translations =
    messages = invenio_records_marc21
invenio_jsonschemas.schemas =
    marc21 = invenio_records_marc21.records.jsonschemas
invenio_search.mappings =
    marc21records = invenio_records_marc21.records.mappings
invenio_assets.webpack =
    invenio_records_marc21_theme = invenio_records_marc21.ui.theme.webpack:theme


[aliases]
test = pytest

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401

[compile_catalog]
directory = invenio_records_marc21/translations/

[extract_messages]
copyright_holder = Graz University of Technology
msgid_bugs_address = info@tugraz.at
mapping-file = babel.ini
output-file = invenio_records_marc21/translations/messages.pot
add-comments = NOTE

[init_catalog]
input-file = invenio_records_marc21/translations/messages.pot
output-dir = invenio_records_marc21/translations/

[update_catalog]
input-file = invenio_records_marc21/translations/messages.pot
output-dir = invenio_records_marc21/translations/

[flake8]
max-line-length = 88
extend-ignore = E203
select = C,E,F,W,B,B950
ignore = E501

[isort]
profile = black

[pycodestyle]
ignore = E203,E501

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --isort --pydocstyle --bandit --black --doctest-glob="*.rst" --doctest-modules --cov=invenio_records_marc21 --cov-report=term-missing
testpaths = tests invenio_records_marc21
live_server_scope = module
